--- a/app/src/main/res/layout/item_calorie_entry.xml
+++ b/app/src/main/res/layout/item_calorie_entry.xml
@@ -3,7 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_margin="8dp"
+    android:background="@drawable/card_background"
+    android:elevation="2dp"
+    android:clipToOutline="true">
 
     <TextView
         android:id="@+id/tvCalories"
@@ -29,3 +33,5 @@
         android:textSize="14sp"
         android:textColor="@android:color/black" />
 </LinearLayout>
+
+
