--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Baby pink colors -->
+    <color name="primaryColor">#F8BBD0</color> <!-- Light baby pink -->
+    <color name="primaryDarkColor">#F48FB1</color> <!-- Darker baby pink for status bar -->
+    <color name="accentColor">#FF80AB</color> <!-- Optional accent color -->
+    <color name="backgroundColor">#FFF0F6</color> <!-- Light pink background -->
+    <color name="darkMauve">#6A1B4D</color>
 </resources>
